# jarvis-auth0-hackathon

./: .env.example  .gitignore  INDEX.md  INSTALLATION.md  LICENSE  QUICKSTART.md  README.md  SUBMISSION.md  pyproject.toml  requirements.txt  setup.py
examples/: __init__.py  demo_multi_agent_auth.py
jarvis_agent_auth/: __init__.py  agent_identity.py  audit_logger.py  auth_manager.py  consensus_auth.py  mcp_middleware.py
tests/: __init__.py  test_agent_identity.py  test_audit_logger.py  test_auth_manager.py  test_consensus.py
