[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-agent-auth"
version = "1.0.0"
description = "Secure Multi-Agent Orchestrator using Auth0 Token Vault"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "JARVIS AgentAuth Team", email = "team@jarvisagentauth.dev"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",